<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/default_margin"
    android:orientation="vertical"
    >

    <com.handy.portal.library.ui.view.CollapsibleContentLayout
        android:id="@+id/jobs_collapsible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_gray_bottom"
        android:orientation="vertical"
        android:paddingBottom="1dp"
        >

        <LinearLayout
            android:id="@+id/jobs_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_gray"
            android:orientation="vertical"
            android:showDividers="beginning|middle"
            />
    </com.handy.portal.library.ui.view.CollapsibleContentLayout>

    <com.handy.portal.library.ui.view.CollapsibleContentLayout
        android:id="@+id/supplies_collapsible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_gray_bottom"
        android:orientation="vertical"
        android:paddingBottom="1dp"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_gray_top"
            android:paddingTop="1dp"
            >

            <include layout="@layout/view_supplies_container"/>
        </FrameLayout>
    </com.handy.portal.library.ui.view.CollapsibleContentLayout>

    <RelativeLayout
        android:id="@+id/tips_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_half"
        android:padding="@dimen/default_padding"
        android:background="@drawable/border_gray_no_side"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        >

        <ImageView
            android:id="@+id/image_basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/img_basket_supplies_small"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/image_basket"
            android:layout_centerVertical="true"
            android:text="@string/tips_for_preparing_for_your_first_job"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/tips_text_right_margin"
            style="@style/TextView"
            />
    </RelativeLayout>

    <com.handy.portal.onboarding.ui.view.LearningLinksView
        android:id="@+id/links_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_gray"
        android:orientation="vertical"
        android:showDividers="middle|end"
        />
</LinearLayout>
