<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TableLayout
        android:id="@+id/edit_preferences_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stretchColumns="2"
        >

        <com.handy.portal.library.ui.view.StaticFieldTableRow
            android:id="@+id/date_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_gray_no_side"
            />

        <com.handy.portal.library.ui.view.StaticFieldTableRow
            android:id="@+id/location_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_gray_bottom"
            />
    </TableLayout>

    <TextView
        android:id="@+id/schedule_preferences_notice"
        style="@style/TextView.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/default_padding"
        android:text="@string/schedule_preferences_notice"
        android:textColor="@color/subtitle_grey"
        />
</LinearLayout>
