...
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/single_action_button"
        android:layout_alignWithParentIfMissing="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                    tools:text="@string/wont_charge_until_two_weeks"
                    tools:visibility="visible"
                    />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/main_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <LinearLayout
                android:id="@+id/action_button_group"
...
