<RelativeLayout
    android:id="@+id/loading_overlay"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_trans"
    android:clickable="true"
    android:visibility="gone"
...
