...
    <string name="claim_job">Claim Job</string>
    <string name="upgrade_job">Upgrade Job</string>
    <string name="confirm_claim">Confirm Claim</string>
    <string name="confirm_upgrade">Confirm Upgrade</string>
    <string name="review_your_update">Review your job update</string>
    <string name="claim_series">Claim Series</string>
    <string name="on_my_way">On My Way</string>

    <string name="job_claim_success">Success! Job claimed!</string>
    <string name="series_claim_success">Success! Series claimed!</string>

    <string name="job_remove_success">You have cancelled this job.</string>
    <string name="series_remove_success">Success! Series removed!</string>
...
    <string name="error_update_failed_unwritable">Update failed. Your external storage is not writable. Please make sure USB storage mode is off.</string>
    <string name="app_update_later_button">Update Later</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tab_claim">Claim</string>
    <string name="tab_clients">Clients</string>
    <string name="tab_schedule">Schedule</string>
    <string name="tab_notifications">Notifications</string>
    <string name="tab_messages">Messages</string>
    <string name="tab_more">More</string>
    <string name="title_activity_please_update">PleaseUpdateActivity</string>
    <string name="available_jobs">Available Jobs</string>
    <string name="available_job">Available Job</string>
...
    <string name="error_fetching_available_jobs">There was an error fetching your available jobs.</string>
    <string name="error_fetching_scheduled_jobs">There was an error fetching your scheduled jobs.</string>
    <string name="error_fetching_matching_jobs">There was an error searching for matching jobs.</string>
    <string name="error_fetching_booking_details">There was an error fetching your booking details.</string>
    <string name="error_fetching_connectivity_issue">Oops! There was an error with your internet connection.</string>
    <string name="try_again">Try Again</string>
    <string name="no_scheduled_jobs">You have not claimed any jobs for this day.</string>
    <string name="return_to_available_jobs">"Return to Jobs"</string>
    <string name="return_to_schedule">"Return to Schedule"</string>
    <string name="job_claim_error">"Error Claiming Job"</string>
    <string name="job_claim_error_generic">"This job is no longer available"</string>
    <string name="bring_cleaning_supplies">Bring cleaning supplies to this job</string>
    <string name="today">Today</string>
...

    <string name="call">Call</string>
    <string name="text">Text</string>
    <string name="invalid_phone_number">We don\'t have a phone number for your customer. Please try to complete the job as planned.</string>
    <string name="unable_to_call_customer">Unable to call customer.</string>
    <string name="unable_to_text_customer">Unable to text customer.</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="remove_job">Remove Job</string>
    <string name="job_support">Job Support</string>
    <string name="job_remove_error">Error Removing Job"</string>
    <string name="job_remove_error_generic">This job could not be removed.</string>

...
    <string name="sign_here">Sign Here</string>
    <string name="clear_signature">clear signature</string>
    <string name="use_finger_to_sign">use your finger to sign</string>
    <string name="complete_checkout">Complete Check Out</string>
    <string name="job_started">Job started:</string>
    <string name="see_job_details">see job details</string>
    <string name="continue_to_check_out">Continue to Check Out</string>

    <string name="job_no_longer_available">That job is no longer available.</string>
    <string name="environment">Environment</string>
    <string name="date">Date</string>
    <string name="progress">Progress</string>
    <string name="in_progress">In Progress</string>

    <!-- Job Cancellation -->
    <string name="need_to_cancel">Are you sure you need to cancel?</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="keep_rate">Keep rate</string>
    <string name="keep_rate_negatively_impacted">Your keep rate will be negatively impacted.</string>
    <string name="empty_keep_rate_percent">- - %</string>
    <string name="keep_rate_percent_formatted">%1$d%%</string>
    <string name="no_keep_rate">Not enough data</string>
    <string name="withholding_fee_simple_formatted">You will incur a %1$s fee and reduce your keep rate:</string>
...
