...
                android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/booking_action_button"
        android:layout_alignParentTop="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                />

            <Button
                android:id="@+id/booking_support_button"
                style="@style/Button.Grey.Round"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/extra_margin_large"
                android:layout_marginBottom="@dimen/extra_padding_medium"
                android:text="@string/job_support"
...
