...
                android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/booking_action_button"
        android:layout_alignParentTop="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                    android:textSize="@dimen/default_text_size"
                    android:visibility="gone"
                    tools:visibility="visible"
                    />

                <FrameLayout
                    android:id="@+id/booking_map_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/on_my_way_booking_details_map_height"
                    />

                <RelativeLayout
                    android:id="@+id/booking_customer_contact_layout"
...
